Bug 249611 - Regression: Cannot create new Notes
Summary: Regression: Cannot create new Notes
Status: CLOSED FIXED
Alias: None
Product: KJots Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-31 13:16 UTC by Felix Wolfsteller
Modified: 2010-09-21 09:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-08-31 13:16:26 UTC
Version:           unspecified
OS:                Linux

In Version 4:4.5~20100827.1168757-1maemo1.1169941, the "Write new Note" Button does not behave.

Touching it does neither lead to output nor to the view to create a note.

Reproducible: Always

Steps to Reproduce:
Start notes.
Touch "Write new Note".

Actual Results:  
Nothing happens.

Expected Results:  
Access to view to create a new Note.
Comment 1 Stephen Kelly 2010-09-13 11:51:20 UTC
SVN commit 1174827 by skelly:

Add a hook to tell the QML environment when an item is select()ed.

Fixes the bug of creating a new note appearing to do nothing.

BUG: 249611

 M  +1 -1      akonadi_next/notecreatorandselector.cpp  
 M  +14 -0     mobile/lib/ItemListView.qml  
 M  +21 -0     mobile/lib/kdeclarativemainview.cpp  
 M  +19 -0     mobile/lib/kdeclarativemainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1174827
Comment 2 Felix Wolfsteller 2010-09-17 17:56:42 UTC
Now (4:4.5~20100917.1176264-1maemo1.1174921) it correctly shows "No resources available - Notes Mobile\nYou do not appear to have any resources for notes. Please create one first." .

This should probably become a separate issue, once elaborated.
Comment 3 Felix Wolfsteller 2010-09-21 09:25:58 UTC
Separate issue opened as https://bugs.kde.org/show_bug.cgi?id=251889 .
Closing this one.