Add a hook to tell the QML environment when an item is select()ed.

Fixes the bug of creating a new note appearing to do nothing.

BUG: 249611

svn path=/trunk/KDE/kdepim/mobile/; revision=1174827